--- a/css/styles.css
+++ b/css/styles.css
@@ -252,6 +252,21 @@ a {
     line-height: 1.5;
   }
 
+  .nav-logo {
+    width: 125px;
+    height: 125px;
+  }
+
+  .bar {
+    width: 75px;
+    height: 7px;
+    margin: 15px auto;
+  }
+
+  .nav-menu {
+    font-size: 2.5rem;
+  }
+
   #title.container-fluid {
     text-align: center;
   }
@@ -302,6 +317,14 @@ a {
   }
 
   #contact {
+    font-size: 2rem;
+  }
+
+  #contact input {
+    font-size: 2rem;
+  }
+
+  #contact textarea {
     font-size: 2rem;
   }
 
