increase font size and icons for mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -271,6 +271,10 @@ a {
     text-align: center;
   }
 
+  #title .big-heading {
+    margin-top: 10%;
+  }
+
   #title button {
     font-size: 2rem;
     height: 5rem;
